--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
           <div class="form-group">
             <!-- TODO -->
             <!-- add v-model here for event description -->
-            <textarea class="form-control" placeholder="Event Description"></textarea>
+            <input class="form-control" placeholder="Event Description" v-model="event.description">
+
           </div>
 
           <div class="form-group">
             <!-- TODO -->
             <!-- add v-model here for event date -->
-            <input type="date" class="form-control" placeholder="Date">
+            <input class="form-control" placeholder="Event Date" v-model="event.date">
+
           </div>
           <!-- TODO -->
           <!-- add v-on:click here -->
-          <button class="btn btn-primary">Submit</button>
+          <button class="btn btn-primary" v-on:click="addEvent">Submit</button>
 
         </div>
       </div>
@@ -76,13 +78,13 @@
             <i class="glyphicon glyphicon-calendar" v-if="event.date"></i>
             <!-- TODO -->
             <!-- add {{ event.date }} here -->
-
+            {{ event.date }}
           </h5>
 
           <p class="list-group-item-text" v-if="event.description">
             <!-- TODO -->
             <!-- add {{ event.description }} here -->
-
+            {{ event.description }}
           </p>
 
           <button class="btn btn-xs btn-danger" v-on:click="deleteEvent(index)">Delete</button>
@@ -92,6 +94,11 @@
   </div>
 
   <!-- Add scripts here -->
-
+  <script src="node_modules/vue/dist/vue.js"></script>
+  <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </body>
 </html>
